k8s/dpl-clients.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clients
  labels:
    app: clients
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clients
  template:
    metadata:
      labels:
        app: clients
    spec:
      containers:
      - name: clients
        imagePullPolicy: Never
        image: clients
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: clients
spec:
  type: NodePort
  selector:
    app: clients
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 80
