k8s/dpl-envent-bus.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envent-bus
  labels:
    app: envent-bus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envent-bus
  template:
    metadata:
      labels:
        app: envent-bus
    spec:
      containers:
      - name: event-bus
        imagePullPolicy: Never
        image: event-bus
        ports:
        - containerPort: 4005

---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  type: NodePort
  selector:
    app: envent-bus
  ports:
  - protocol: TCP
    port: 4005
    targetPort: 4005
