k8s/dpl-posts.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts
  labels:
    app: posts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
      - name: posts
        imagePullPolicy: Never
        image: posts
        ports:
        - containerPort: 4000

---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  type: NodePort
  selector:
    app: posts
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
