k8s/dpl-query.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query
  labels:
    app: query
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query
        imagePullPolicy: Never
        image: query
        ports:
        - containerPort: 4002

---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  type: NodePort
  selector:
    app: query
  ports:
  - protocol: TCP
    port: 4002
    targetPort: 4002
